tests/fail/semantics/invalid_lifecycle_hook/main.kira
annotation State {
}

construct Widget {
    annotations {
        @State;
    }

    lifecycle {
        onAppear() {}
    }
}

Widget Card() {
    content {
    }

    onDisappear() {
        return;
    }
}
